--- a/AleynaBlog/AleynaBlog.csproj
+++ b/AleynaBlog/AleynaBlog.csproj
@@ -3966,6 +3966,7 @@
     <Content Include="Views\Shared\_RightsideBar.cshtml" />
     <Content Include="Views\AuthorAdmin\Create.cshtml" />
     <Content Include="Views\AuthorAdmin\Details.cshtml" />
+    <Content Include="Views\AuthorAdmin\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
