--- a/AleynaBlog/AleynaBlog.csproj
+++ b/AleynaBlog/AleynaBlog.csproj
@@ -3625,6 +3625,7 @@
     <Content Include="Content\Site\images\logo\favicon.png" />
     <Content Include="Content\Site\images\logo\logo.png" />
     <Content Include="Content\Site\images\logo\logo2.png" />
+    <Content Include="Content\Site\images\logo\logo3.png" />
     <Content Include="Content\Site\images\logo\logo852.png" />
     <Content Include="Content\Site\images\project\1.jpg" />
     <Content Include="Content\Site\images\project\2.jpg" />
