--- a/AleynaBlog/AleynaBlog.csproj
+++ b/AleynaBlog/AleynaBlog.csproj
@@ -3707,6 +3707,9 @@
     <Compile Include="Models\Author.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Contact.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -3968,6 +3971,7 @@
     <Content Include="Views\AuthorAdmin\Create.cshtml" />
     <Content Include="Views\AuthorAdmin\Details.cshtml" />
     <Content Include="Views\AuthorAdmin\Edit.cshtml" />
+    <Content Include="Views\Contact\CreateMessage.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
