--- a/AleynaBlog/AleynaBlog.csproj
+++ b/AleynaBlog/AleynaBlog.csproj
@@ -3707,6 +3707,9 @@
     <Compile Include="Models\Author.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Category.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Contact.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
