--- a/AleynaBlog/AleynaBlog.csproj
+++ b/AleynaBlog/AleynaBlog.csproj
@@ -3982,6 +3982,8 @@
     <Content Include="Views\AuthorAdmin\Edit.cshtml" />
     <Content Include="Views\Contact\CreateMessage.cshtml" />
     <Content Include="Views\Blog\AddArticle.cshtml" />
+    <Content Include="Views\Blog\Article.cshtml" />
+    <Content Include="Views\AuthorAdmin\ArticleIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
